# halodi-robot-models

./: .gitignore  Readme.md  build.gradle  gradle-production.properties  gradle-release.properties  gradle.properties
eve_r3_description/: CMakeLists.txt  Readme.md  model.config  package.xml
eve_r3_description/cmake/: DeleteMaterial.xsl
eve_r3_description/launch/: urdf_viz.launch.py
eve_r3_description/sdf/: eve_r3.collision.sdf  eve_r3.sdf  eve_r3_robotiq_2f_85.sdf  eve_r3_robotiq_hand-e.sdf  eve_r3_upper_body.sdf  eve_r3_upper_body_no_hands.sdf
eve_r3_description/urdf/: eve_r3.collision.urdf  eve_r3.urdf  eve_r3_robotiq_2f_85.urdf  eve_r3_robotiq_hand-e.urdf  eve_r3_upper_body.urdf  eve_r3_upper_body_no_hands.urdf
eve_r3_description/urdf.in/: eve_r3.collision.in.urdf  eve_r3.in.urdf  eve_r3_head.in.urdf  eve_r3_left_arm.collision.in.urdf  eve_r3_left_arm.in.urdf  eve_r3_leg.collision.in.urdf  eve_r3_leg.in.urdf  eve_r3_right_arm.collision.in.urdf  eve_r3_right_arm.in.urdf  eve_r3_robotiq_2f_85.in.urdf  eve_r3_robotiq_hand-e.in.urdf  eve_r3_upper_body.in.urdf  eve_r3_upper_body_no_hands.in.urdf  qbhand.left.in.urdf  qbhand.right.in.urdf  robotiq_2f_85.in.urdf  robotiq_2f_85.left.in.urdf  robotiq_2f_85.right.in.urdf  robotiq_hand-e.left.in.urdf  robotiq_hand-e.right.in.urdf
eve_r3_description/urdf/xacro/: eve_r3.collision.urdf.xacro
halodi-robot-models-unity-support/: .gitignore
halodi-robot-models-unity-support/Assets/: HDRenderPipelineAsset.asset  HalodiPackage.json
halodi-robot-models-unity-support/Assets/Editor/: ImportHalodiRobotModels.cs  OBJAssetPostProcessor.cs
halodi-robot-models-unity-support/Assets/Editor/Halodi/: ImportHalodiRobotModels.cs  OBJAssetPostProcessor.cs
halodi-robot-models-unity-support/Assets/HDRPDefaultResources/: HDRenderPipelineAsset.asset
halodi-robot-models-unity-support/Assets/Halodi/Models/Editor/: ExportMeshToFilePostProcessor.cs  ImportHalodiRobotModels.cs  ImportModels.cs  RemoveRosSharpFromModelPostProccessor.cs  RobotModelPostProcessorRunner.cs
halodi-robot-models-unity-support/Assets/Halodi/Models/Editor/Articulaton/: ArticulationBodyBuilder.cs  ArticulationFixedJointBuilder.cs  ArticulationFloatingJointBuilder.cs  ArticulationPostProcessor.cs  ArticulationPrismaticJointBuilder.cs  ArticulationRevoluteJointBuilder.cs
halodi-robot-models-unity-support/Assets/Prefabs/: lhand_robotiq_arg2f_base_link.prefab
halodi-robot-models-unity-support/Assets/Scenes/: SampleScene.unity
halodi-robot-models-unity-support/Assets/halodi-robot-models/: README.md  package.json
halodi-robot-models-unity-support/Assets/halodi-robot-models/Editor/: OBJAssetPostProcessor.cs  com.halodi.halodi-robot-models.Editor.asmdef
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/: com.halodi.halodi-robot-models.Runtime.asmdef
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/Materials/: Default.mat  base.mat  distal.mat  knuckle.mat  middle.mat  optional.mat  palm.mat  proximal.mat
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/Materials/eve_r3/: abdomen.mat  ankle.mat  base.mat  elbow.mat  forearm.mat  head.mat  head_faceplate.mat  hip.mat  humanoid.mat  palm.mat  qbhand.mat  scapula.mat  shin.mat  shoulder.mat  thigh.mat  torso.mat  upper_arm.mat  wheel.mat  wrist.mat
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/Prefabs/: eve_r3_head_faceplate.prefab
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/Resources/Materials/eve_r3/: abdomen.mat  ankle.mat  base.mat  elbow.mat  forearm.mat  head.mat  head_faceplate.mat  hip.mat  humanoid.mat  palm.mat  scapula.mat  shin.mat  shoulder.mat  thigh.mat  torso.mat  upper_arm.mat  wheel.mat  wrist.mat
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/Resources/Models/eve_r3/: head_faceplate.mtl
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/ShaderGraphs/: eve_r3_bodyParts.shadergraph  eve_r3_head.shadergraph  eve_r3_wheel.shadergraph
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/models/: eve_r3.prefab  eve_r3_upper_body.prefab  eve_r3_upper_body.urdf  eve_r3_upper_body_no_hands.prefab  eve_r3_upper_body_no_hands.urdf
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/models/Materials/: Default.mat  base.mat  distal.mat  knuckle.mat  middle.mat  optional.mat  palm.mat  proximal.mat  qbhand.mat
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/models/qb_hand_description/: License.md
halodi-robot-models-unity-support/Assets/halodi-robot-models/Runtime/halodi/models/qb_hand_description/meshes/: flange_iso_04.prefab  flange_iso_04_0.asset  palm_pinch_l.prefab  palm_pinch_r.prefab  ph_distal.prefab  ph_distal_0.asset  ph_knuckle.prefab  ph_medium.prefab  ph_small.prefab  ph_thumb_l.prefab  (+3 more)
halodi-robot-models-unity-support/Assets/halodi-robot-models/Tests/Editor/: com.halodi.halodi-robot-models.Editor.Tests.asmdef
halodi-robot-models-unity-support/Assets/halodi-robot-models/Tests/Runtime/: com.halodi.halodi-robot-models.Runtime.Tests.asmdef
halodi-robot-models-unity-support/ProjectSettings/: DynamicsManager.asset  GraphicsSettings.asset  HDRPProjectSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  TimeManager.asset
qb_hand_description/: CMakeLists.txt  model.config  package.xml
qb_hand_description/meshes/: palm_pinch_l.mtl  ph_distal.mtl  ph_knuckle.mtl  ph_thumb_l.mtl
robotiq_2f_85_gripper_visualization/: CMakeLists.txt  model.config  package.xml
robotiq_2f_85_gripper_visualization/meshes/visual/: robotiq_arg2f_85_base_link.mtl  robotiq_arg2f_85_inner_finger.mtl  robotiq_arg2f_85_inner_knuckle.mtl  robotiq_arg2f_85_outer_finger.mtl  robotiq_arg2f_85_pad.mtl
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro
robotiq_hand-e/: CMakeLists.txt  model.config  package.xml  robotiq_hand-e.urdf
robotiq_hand-e/meshes/: Bolts.stl
(+1 files in other folders)
