<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eve_r3_description</name>
  <version>3.1.0</version>
  <description>Eve model description.</description>
  <maintainer email="jesper@halodi.com">Jesper Smith</maintainer>
  <license>Apache License 2.0</license>

  <author email="jesper@halodi.com">Jesper Smith</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>gazebo</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  <depend>qb_hand_description</depend>
  <depend>robotiq_2f_85_gripper_visualization</depend>
  <depend>xsltproc</depend>

  <!-- for urdf visualizer   -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
